--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Fira Code';
+}
+
 body {
     margin: auto;
 }
@@ -64,6 +68,7 @@ body {
 }
 .title {
     padding: 80px;
+    color: black;
 }
 /*skills*/
 .skillsSection {
@@ -87,4 +92,10 @@ body {
 }
 .card-text {
     font-size: 10px;
+}
+
+/*contact section*/
+.contact-list {
+    text-align: center;
+    font-family: 'Fira Code';
 }
