--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body {
     transition: 2s;
 }
 .contact-list li img:hover {
-    transform:scale(1.2);
+    transform: scale(1.2);
 }
 
 /*footer*/
@@ -139,7 +139,18 @@ footer li img {
     height: 25px;
     width: 25px;
 }
+.footer-list li img {
+    transition: 2s;
+}
+.footer-list li img:hover {
+    transform: scale(1.2);
+}
 /*home button*/
 .homeButton {
     margin-left: 30px;
+box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.3s ease-in-out;
+}
+.homeButton:hover {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
 }
