--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,17 @@
 
 body {
     margin: auto;
+    font-size: 16px;
 }
 
 /*nav content*/
 .customNav {
     background-color: rgb(9, 42, 78) !important;
-    padding: 10px;
+    padding: 0.625em;
 }
 
 .navbar-brand {
-    font-size: 50px;
+font-size: 3.125em;
 }
 
 #my-name,
@@ -48,19 +49,20 @@ body {
 }
 
 .jumbotron h1 {
-    font-size: 30px;
+    font-size: 1.875em;
 }
 
 .profilePicture {
     border-radius: 50%;
-    max-width: 200px;
-    padding: 5px;
-    border: white 3px solid;
+        max-width: 12.5em;
+        padding: 0.3125em;
+        border: white 0.1875em solid;
 }
+
 .shortDescription {
     margin: auto;
-    padding: 30px !important;
-    font-size: 15px !important;
+        padding: 1.875em !important;
+        font-size: 0.9375em !important;
 }
 
 /*projects css*/
@@ -74,11 +76,12 @@ body {
 .card-text {
     text-align: center;
 }
+
 .card {
     margin: auto;
-    text-align: center;
-    transition: transform .3s;
-    margin: 20px;
+        text-align: center;
+        transition: transform 0.3s;
+        margin: 1.25em;
 }
 
 .card:hover {
@@ -105,11 +108,11 @@ body {
 }
 
 .skillsSection ul {
-    margin: 30px;
-    text-align: center;
-    width: fit-content;
-    padding: 30px;
-    margin: auto;
+    margin: 1.875em;
+        text-align: center;
+        width: fit-content;
+        padding: 1.875em;
+        margin: auto;
 }
 
 /*about me section*/
@@ -122,7 +125,7 @@ body {
 }
 
 .aboutmeCard {
-    width: fit-content;
+    width: 500px;
     margin: auto;
 }
 
@@ -131,25 +134,25 @@ body {
 }
 
 .aboutme-section img {
-    height: 300px;
+    height: 18.75em;
 }
 
 /*contact section*/
 .contact-list {
     text-align: start;
-    margin-left: 20px;
-    padding: 20px;
-    font-size: 20px;
+        margin-left: 1.25em;
+        padding: 1.25em;
+        font-size: 1.25em;
 }
 
 .contact-list li {
-    padding: 10px;
+    padding: 0.625em;
 }
 
 .contact-list li img {
-    height: 30px;
-    width: 30px;
-    transition: 2s;
+    height: 1.875em;
+        width: 1.875em;
+        transition: 2s;
 }
 
 .contact-list li img:hover {
@@ -185,11 +188,11 @@ footer li img {
 
 /*home button*/
 .homeButton {
-    margin-left: 30px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    transition: box-shadow 0.3s ease-in-out;
+    margin-left: 1.875em;
+        box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.15);
+        transition: box-shadow 0.3s ease-in-out;
 }
 
 .homeButton:hover {
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
+    box-shadow: 0 0.3125em 0.9375em rgba(0, 0, 0, 0.8);
 }
